--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <h2>Register Now!</h2>
     <!-- Replace the link below with your actual Google Form link -->
-    <a href="https://forms.gle/your-google-form-link" class="button">Register Here</a>
+    <a href="https://forms.gle/tyD2JbGnqLifofYg8" class="button">Register Here</a>
 
     <h2>Payment</h2>
     <p>
